force-app/main/default/objects/AFF_Job_Step__c/AFF_Job_Step__c.object-meta.xml
<CustomObject>
    <description>Represents a single, discrete step (transaction) within the job.</description>
    <label>AFF Job Step</label>
    <nameField>
        <label>AFF Sub Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFF Job Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>