force-app/main/default/objects/AFF_Job_Step__c/fields/AFF_Job__c.field-meta.xml
<CustomField>
    <fullName>AFF_Job__c</fullName>
    <description>Master detail to the AFF Job SObject</description>
    <label>AFF_Job</label>
    <referenceTo>AFF_Job__c</referenceTo>
    <relationshipLabel>AFF Job Steps</relationshipLabel>
    <relationshipName>AFF_Job_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>