force-app/main/default/objects/AFF_Job_Step__c/fields/Current_Chunk_Index__c.field-meta.xml
<CustomField>
    <fullName>Current_Chunk_Index__c</fullName>
    <label>Current Chunk Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>