force-app/main/default/objects/AFF_Job_Step__c/fields/Previous_Values_JSON__c.field-meta.xml
<CustomField>
    <fullName>Previous_Values_JSON__c</fullName>
    <description>this field will store the JSON representation of the state before the action was executed. This is the &quot;undo&quot; log used by the compensator.</description>
    <label>Previous Values JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>