force-app/main/default/objects/AFF_Job_Step__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The result of this step, if any.</description>
    <label>Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>