force-app/main/default/objects/AFF_Job_Step__c/fields/Step_Executor_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Executor_Name__c</fullName>
    <description>The fully qualified Apex class name of the logic for this step (e.g., &apos;MyOrg.CreateAccountStep&apos;).</description>
    <label>Step Executor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>