force-app/main/default/objects/AFF_Job_Step__c/fields/Step_Index__c.field-meta.xml
<CustomField>
    <fullName>Step_Index__c</fullName>
    <description>The sequence of this step (e.g., 1, 2, 3...). Must be unique per job.</description>
    <inlineHelpText>The sequence of this step (e.g., 1, 2, 3...). Must be unique per job.</inlineHelpText>
    <label>Step Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>