force-app/main/default/objects/AFF_Job_Step__c/fields/Step_Progress_State__c.field-meta.xml
<CustomField>
    <fullName>Step_Progress_State__c</fullName>
    <description>This field serves as a persistent bookmark for the subsequent invocation of the Step (Sub Action). It stores necessary data to facilitate processing new portions of work.

For instance, if we need to process 1000 records in batches of 100 per transaction, this field can track the number of records already processed. After the first transaction, it will store 100, then 200 after the second, and so on.</description>
    <label>Step Progress State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>